# backend/internal/api/types.go
@@ -3,10 +3,20 @@
 // Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
 package api
 
+import (
+	"time"
+
+	openapi_types "github.com/oapi-codegen/runtime/types"
+)
+
+const (
+	BearerAuthScopes = "BearerAuth.Scopes" // #nosec G101
+)
+
 // AuthResponse defines model for AuthResponse.
 type AuthResponse struct {
-	Token *string `json:"token,omitempty"`
-	User  User    `json:"user"`
+	Token string `json:"token"`
+	User  User   `json:"user"`
 }
 
 // ErrorResponse defines model for ErrorResponse.
@@ -16,21 +26,23 @@ type ErrorResponse struct {
 
 // SignInRequest defines model for SignInRequest.
 type SignInRequest struct {
-	Email    string `json:"email"`
-	Password string `json:"password"`
+	CaptchaToken *string             `json:"captchaToken,omitempty"`
+	Email        openapi_types.Email `json:"email"`
+	Password     string              `json:"password"`
 }
 
 // SignUpRequest defines model for SignUpRequest.
 type SignUpRequest struct {
-	Email    string `json:"email"`
-	Password string `json:"password"`
+	CaptchaToken *string             `json:"captchaToken,omitempty"`
+	Email        openapi_types.Email `json:"email"`
+	Password     string              `json:"password"`
 }
 
 // User defines model for User.
 type User struct {
-	CreatedAt string `json:"created_at"`
-	Email     string `json:"email"`
-	Id        string `json:"id"`
+	CreatedAt time.Time           `json:"created_at"`
+	Email     openapi_types.Email `json:"email"`
+	Id        openapi_types.UUID  `json:"id"`
 }
 
 // SignInJSONRequestBody defines body for SignIn for application/json ContentType.
